--- a/views/UserPanel/home.ejs
+++ b/views/UserPanel/home.ejs
@@ -109,10 +109,6 @@
             </div>
         </div>
     </div>
-    <!-- Paragraph end -->
-
-
-    <!-- Product slider -->
     <section class="section-b-space pt-0 ratio_asos">
         <div class="container">
             <div class="row">
@@ -122,11 +118,11 @@
                         <div class="product-box">
                             <div class="img-wrapper">
                                 <div class="front">
-                                    <a href="product-page(no-sidebar).html"><img src="<%=pd.productImage%>"
+                                    <a href="/product/<%=pd.category%>/<%=pd.subcategory%>/<%=pd.extracategory%>"><img src="<%=pd.productImage%>"
                                             class="img-fluid blur-up lazyload bg-img" alt=""></a>
                                 </div>
                                 <div class="back">
-                                    <a href="product-page(no-sidebar).html"><img src="<%=pd.productImage%>"
+                                    <a href="/product/<%=pd.category%>/<%=pd.subcategory%>/<%=pd.extracategory%>"><img src="<%=pd.productImage%>"
                                             class="img-fluid blur-up lazyload bg-img" alt=""></a>
                                 </div>
                                 <div class="cart-info cart-wrap">
