--- a/views/UserPanel/cart.ejs
+++ b/views/UserPanel/cart.ejs
@@ -101,7 +101,7 @@
         </div>
         <div class="row cart-buttons">
             <div class="col-6"><a href="#" class="btn btn-solid">continue shopping</a></div>
-            <div class="col-6"><a href="#" class="btn btn-solid">check out</a></div>
+            <div class="col-6"><a href="/checkout" class="btn btn-solid">check out</a></div>
         </div>
     </div>
 </section>
